--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 							<img src="img/shu.jpg" alt="" class="img-responsive">
 						</div>	
 						<div class="img1_wenzi img1_wenzi1">
-							<h1>个人爱好</h1>
-							<h2>&nbsp;&nbsp;&nbsp;&nbsp;我不想成为一个庸俗的人。十年百年后，当我们死去，质疑我们的人同样死去，后人看到的是裹足不前、原地打转的你，还是一直奔跑、走到远方的我？</h2>
+							<h1>具体介绍</h1>
+							<h2>&nbsp;&nbsp;&nbsp;&nbsp;大家好，我叫武财馨，是来自山西省财政税务专科学校的一名学生，我擅长ps,html5,javascript,jquery等技术，我做事认真细心，并且有很好的学习能力。</h2>
 						</div>
 					</div>
 					<div class="imgbox1">
