--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 						</div>	
 					</div>
 					<div class="title">
-						<a href="https://wucaixin.github.io/yijusd/">宜居</a>
+						<a href="https://wucaixin.github.io/yiju/">宜居</a>
 					</div>
 				</div>
 			</div>
